<resources>
    <string name="app_name">NurseHRO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">2947483168858179</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2947483168858179</string>


    <!-- RegisterActivity -->
    <string name="TextView_Register">REGISTER</string>
    <string name="add_profile_picture">Add Profile Picture</string>
    <string name="TextInputLayout_Nickname">Nickname</string>
    <string name="TextInputLayout_FirstName">First Name</string>
    <string name="TextInputLayout_LastName">Last Name</string>
    <string name="TextInputLayout_ComfirmPassword">ComfirmPassword</string>
    <string name="CheckBox_Policy">By registering, you agree to NuresHRO\'s terms of and privacy policy</string>
    <string name="Choose_Position">Choose Position</string>
    <string name="Nurse">Nurse</string>
    <string name="Normal">Normal</string>
    <string name="Next">Next</string>

    <!-- RegisterSuccessActivity -->
    <string name="TextView_Succsess">Successfully Registered</string>
    <string name="TextView_SuccsessMent">Thank you for waiting!\n All register steps just finished</string>

    <!-- Login -->
    <string name="TextView_Login">LOGIN</string>
    <string name="TextInputLayout_Email">Email</string>
    <string name="TextInputLayout_Password">Password</string>
    <string name="Button_Login">Login</string>
    <string name="TextView_OR">OR</string>
    <string name="Button_LoginFace">Login with Face</string>
    <string name="Button_FindPassword">Find Password</string>
    <string name="Button_Register">Register</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="Auto_Login">Auto Login</string>

    <!-- Main -->
    <string name="Home">Home</string>
    <string name="Find">Find</string>
    <string name="Account">Account</string>
    <string name="Button_Logout">LOGOUT</string>
    <string name="license">License</string>
    <string name="name">Name</string>
    <string name="list">List</string>
    <string name="your_age">Your Age</string>
    <string name="woman">Woman</string>
    <string name="man">Man</string>
    <string name="maps_api_key">AIzaSyAjmxjG7D3CenOqJ9O5TktHfAkfX1QmiVI</string>
    <string name="pick_place">Choose a place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="in_this_resion">In this Area</string>
    <string name="find_hero">Find Hero</string>
    <string name="enter_location">Enter location</string>
    <string name="filter">Filter</string>
    <string name="inappAdvertisement">InAppAdvertisement</string>
    <string name="rating_Nurse">이달의 명예 간호사</string>
    <string name="more_rating_nurse">\'이달의 명예 간호사\'더보기</string>
    <string name="find_by_location">어디까지 모셔다 드릴까요?</string>
    <string name="more_find_location">장소 더보기</string>
    <string name="recommend_nurse">추천 간호사</string>
    <string name="more_recommend_nurse">\'추천 간호사\'더보기</string>
    <string name="info">도움말 구역</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="detail_location">상세주소를 입력하세요</string>
</resources>