<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:paddingHorizontal="16dp"
    >

    <TextView
        android:id="@+id/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:fontFamily="@font/vtrocore"
        android:gravity="center"
        android:text="@string/TextView_Login"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Nurse_icon"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="0.15"
        android:background="@null"
        android:src="@drawable/icon_nurse"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Login"
        app:tint="@color/purple_500" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Email_textinput"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:background="@drawable/txtinput_btn_white"
        app:endIconMode="clear_text"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Nurse_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInputEditText_LoginEmail"
            android:layout_width="370dp"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_weight="0.1"
            android:fontFamily="@font/vtrocore"
            android:hint="@string/TextInputLayout_Email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Password_textinput"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:background="@drawable/txtinput_btn_white"
        app:endIconMode="password_toggle"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Email_textinput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInputEditText_LoginPassword"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_weight="0.1"
            android:fontFamily="@font/vtrocore"
            android:hint="@string/TextInputLayout_Password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/CheckBox_AutoLogin"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:fontFamily="@font/vtrocore"
        android:text="@string/Auto_Login"
        android:textColor="@color/gray"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password_textinput"
        tools:ignore="TouchTargetSizeCheck" />

    <RelativeLayout
        android:id="@+id/login_nbtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/btn_blue"
        android:clickable="true"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CheckBox_AutoLogin"
        android:focusable="true">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:background="@null"
            android:gravity="center"
            android:src="@drawable/icon_profile" />

        <TextView
            android:layout_width="338dp"
            android:layout_height="50dp"
            android:fontFamily="@font/vtrocore"
            android:gravity="center"
            android:stateListAnimator="@null"
            android:text="@string/Button_Login"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_weight="0.1"
        android:fontFamily="@font/vtrocore"
        android:gravity="center"
        android:text="@string/TextView_OR"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_nbtn" />

    <RelativeLayout
        android:id="@+id/RelativeLayout_LoginwithFacebook"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/btn_darkblue"
        android:clickable="true"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_or"
        android:focusable="true">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="45dp"
            android:background="@null"
            android:gravity="center"
            android:src="@drawable/icon_face" />

        <TextView
            android:layout_width="338dp"
            android:layout_height="50dp"
            android:fontFamily="@font/vtrocore"
            android:gravity="center"
            android:stateListAnimator="@null"
            android:text="@string/Button_LoginFace"
            android:textColor="#ffffff" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RelativeLayout_LoginwithFacebook">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:fontFamily="@font/vtrocore"
            android:gravity="center"
            android:text="@string/Button_FindPassword"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/Button_Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:clickable="true"
            android:fontFamily="@font/vtrocore"
            android:gravity="center"
            android:text="@string/Button_Register"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="24dp"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
