<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="com.fachidiot.nursehro.MainFragment.MainHomeFragment">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp2_TutorialAds"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:contentDescription="@string/inappAdvertisement"
                android:nestedScrollingEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/vtrocore"
                android:text="@string/rating_Nurse"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vp2_TutorialAds" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/UserRecyclerGrid"
                android:layout_width="380dp"
                android:layout_height="240dp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Title1" />

            <Button
                    android:id="@+id/botton_more1"
                    android:layout_gravity="center"
                    android:layout_height="50dp"
                    android:layout_width="370dp"
                    android:fontFamily="@font/vtrocore"
                    android:textColor="@color/gray"
                    android:text="@string/more_rating_nurse"
                    android:background="@drawable/btn_white"
                    android:layout_row="2"
                    android:layout_columnSpan="4"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/UserRecyclerGrid"
                    app:layout_constraintVertical_bias="0.0"/>


            <TextView
                android:id="@+id/Title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/vtrocore"
                android:text="@string/find_by_location"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/botton_more1" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/PlaceGrid"
                android:layout_width="380dp"
                android:layout_height="240dp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Title2">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                    android:id="@+id/botton_more2"
                    android:layout_gravity="center"
                    android:layout_height="50dp"
                    android:layout_width="370dp"
                    android:fontFamily="@font/vtrocore"
                    android:textColor="@color/gray"
                    android:text="@string/more_find_location"
                    android:background="@drawable/btn_white"
                    android:layout_row="2"
                    android:layout_columnSpan="4"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/PlaceGrid"
                    />

            <TextView
                android:id="@+id/Title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/vtrocore"
                android:text="@string/recommend_nurse"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/botton_more2" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/UserRecommendRecyclerGrid"
                android:layout_width="380dp"
                android:layout_height="240dp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Title3" />

            <Button
                    android:id="@+id/botton_more3"
                    android:layout_gravity="center"
                    android:layout_height="50dp"
                    android:layout_width="370dp"
                    android:fontFamily="@font/vtrocore"
                    android:textColor="@color/gray"
                    android:text="@string/more_recommend_nurse"
                    android:background="@drawable/btn_white"
                    android:layout_row="2"
                    android:layout_columnSpan="4"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/UserRecommendRecyclerGrid"
                    />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp2_TutorialAds_Banner"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:contentDescription="@string/inappAdvertisement"
                android:nestedScrollingEnabled="true"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/botton_more3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vp2_TutorialAds_Banner" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>