<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@null"
        android:paddingHorizontal="16dp"
        android:weightSum="10">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/TextView_Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/vtrocore"
                android:gravity="center"
                android:text="@string/TextView_Register"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/button_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/icon_back"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:clickable="true"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="100dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.051"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                android:focusable="true">

                <ImageView
                    android:id="@+id/imageView_AddPicture"
                    android:scaleType="fitCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="2"
                    android:src = "@drawable/icon_plus"
                    />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/AddProfilePicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/vtrocore"
                android:gravity="center"
                android:text="@string/add_profile_picture"
                android:textSize="16sp" />


        </LinearLayout>



        <!-- TEXT INPUT LAYOUT -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_gravity="center"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:textColorHint="@color/blue"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:background="@drawable/txtinput_btn_white"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="bottom|center">

                <com.google.android.material.textfield.TextInputEditText
                    android:maxLength="10"
                    android:id="@+id/TextInputEditText_FirstName"
                    android:textColor="@color/blue"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/TextInputLayout_FirstName"
                    android:fontFamily="@font/vtrocore"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:textColorHint="@color/blue"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:background="@drawable/txtinput_btn_white"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="bottom|center"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:maxLength="10"
                    android:id="@+id/TextInputEditText_LastName"
                    android:textColor="@color/blue"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/TextInputLayout_LastName"
                    android:fontFamily="@font/vtrocore"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:endIconMode="clear_text"
            android:textColorHint="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/txtinput_btn_white"
            android:gravity="bottom|center"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:maxLength="15"
                android:id="@+id/TextInputEditText_Nickname"
                android:textColor="@color/blue"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="7dp"
                android:hint="@string/TextInputLayout_Nickname"
                android:fontFamily="@font/vtrocore"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:endIconMode="clear_text"
            android:textColorHint="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/txtinput_btn_white"
            android:gravity="bottom|center"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:maxLength="30"
                android:id="@+id/TextInputEditText_Email"
                android:textColor="@color/blue"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:hint="@string/TextInputLayout_Email"
                android:layout_marginHorizontal="7dp"
                android:fontFamily="@font/vtrocore"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:textColorHint="@color/blue"
            app:endIconMode="password_toggle"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/txtinput_btn_white"
            android:gravity="bottom|center"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:maxLength="15"
                android:id="@+id/TextInputEditText_Password"
                android:textColor="@color/blue"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:hint="@string/TextInputLayout_Password"
                android:layout_marginHorizontal="7dp"
                android:fontFamily="@font/vtrocore"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:textColorHint="@color/blue"
            app:endIconMode="password_toggle"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/txtinput_btn_white"
            android:gravity="bottom|center"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:maxLength="15"
                android:id="@+id/TextInputEditText_Comfirm_Password"
                android:textColor="@color/blue"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:hint="@string/TextInputLayout_ComfirmPassword"
                android:layout_marginHorizontal="7dp"
                android:fontFamily="@font/vtrocore"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/CheckBox_Policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:maxWidth="340dp"
            android:text="@string/CheckBox_Policy"
            android:layout_marginHorizontal="7dp"
            android:textSize="15sp"
            android:fontFamily="@font/vtrocore"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            />

        <RelativeLayout
            android:id="@+id/RelativeLayout_Register"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_blue"
            android:clickable="true"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:background="@null"
                android:gravity="center"
                android:src="@drawable/icon_userplus"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:stateListAnimator="@null"
                android:text="@string/TextView_Register"
                android:textColor="#ffffff"
                android:fontFamily="@font/vtrocore" />
        </RelativeLayout>

    </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>